# DeployCrafts

./: LICENSE
django-authenticate/: LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml
django-authenticate-v1.0.0/: MANIFEST.in  README.rst  db.sqlite3  pyproject.toml
django-authenticate-v1.0.0/docs/: Documentation.txt
django-authenticate-v1.0.0/src/accounts/: admin.py  apps.py  models.py  signals.py  urls.py
django-authenticate-v1.0.0/src/accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
django-authenticate-v1.0.0/src/authenticate/: admin.py  apps.py  email.py  forms.py  models.py  signals.py  urls.py  views.py
django-authenticate-v1.0.0/src/authenticate/backends/: authentication.py
django-authenticate-v1.0.0/src/authenticate/migrations/: 0001_initial.py  0002_alter_registrar_email_alter_registrar_is_active.py
django-authenticate-v1.0.0/src/authenticate/static/authenticate/: style.css
django-authenticate-v1.0.0/src/authenticate/static/authenticate/src/: tailwind.css
django-authenticate-v1.0.0/src/authenticate/templates/authenticate/: dashboard.html  index.html  register.html
django-authenticate-v1.0.0/src/django_authenticate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django-authenticate-v1.0.0/src/templates/admin/: base_site.html
django-authenticate/authenticate/: apps.py  forms.py  models.py  urls.py  views.py
django-authenticate/authenticate/migrations/: 0001_initial.py  0002_delete_register.py  (+3 more)
django-authenticate/django_authenticate.egg-info/: PKG-INFO  SOURCES.txt
django-authenticate/docs/: Documentation.txt
(+3 files in other folders)
